# fraud-detection-system

./: .dockerignore  .env.example  .env.prod.example  .pre-commit-config.yaml  BACKEND_SETUP.md  CLAUDE.md  CLAUDE_CODE_GUIDE.md  DOCKER_CHECKLIST.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_SETUP.md  Dockerfile  Makefile  README.md  Technical Documentation.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.claude/: orchestrator.md
.claude/agents/: agent-optimizer.md  aisha-patel-qa.md  darius-okafor-sre.md  debugger.md  docs-ref-integrity.md  dr-yuki-tanaka.md  elena-vasquez.md  james-whitfield-compliance.md  marcus-chen-risk-architect.md  priya-nair-security.md  sofia-martinez.md
.claude/commands/: ppr.md  review.md  score.md
.claude/prompts/: update_doc_status.md
.github/workflows/: ci.yml  doc_status_check.yml  security.yml
alembic/: __init__.py  alembic.ini  env.py  script.py.mako
alembic/versions/: 002_risk_assessments.py  003_risk_decisions.py  004_cases.py  005_rules.py
app/: __init__.py  config.py  main.py
app/cassandra/: __init__.py  client.py
app/core/: encryption.py  log_masking.py  logging.py  redis.py  vault.py  webhooks.py
app/db/: __init__.py  engine.py  models.py
app/health/: __init__.py  routes.py
frontend/: .env.local.example  .eslintignore  .eslintrc.json  .gitignore  Dockerfile  middleware.ts  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
k8s/: network-policy.yaml
tests/: conftest.py
todo/: todo-26-03-25.md
(+122 files in other folders)
